@@ -48,6 +48,7 @@
  * @version	1.3.1
  * @date	January 18, 2015
  * Added `=== Screen Reader Text ===` section
+ * Added `h5.comment-link` definition to provide a better aesthetic location
  */
 
 /** Table of Contents ------------------------------------------------------- */
@@ -1149,6 +1150,10 @@ ul.featured-search-pages {
 /** End: Search ------------------------------------------------------------- */
 
 /** === Comments === -------------------------------------------------------- */
+h5.comment-link {
+	padding-left: 11px;
+}
+
 .comments-wrapper ul.comments-list,
 .comments-wrapper ul.comments-list li.comment ul.children,
 .comments-wrapper ul.pingbacks-list,
